--- a/pages/lista.html
+++ b/pages/lista.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReservaOnline-Lista de Locales</title>
-    <link rel="shortcut icon" href="../assets/Logos/icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/Logos/icono2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
@@ -49,15 +49,15 @@
     <p class="display-1 text-center tipo__comida" id="buffet"><strong>Buffet</strong></p>
     <div class="c__cartas card-group container-fluid container-sm my-4 c__cartas">
         <div class="row">
-            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                 <img src="../assets/Logos/Petra logo.jpg" class="card-img-top img-fluid img-thumbnail" alt="pettralogo">
                 <div class="card-body">
                 <h5 class="card-title">Pettra</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et assumenda quasi laboriosam debitis, quam vitae, odit ab alias, praesentium numquam ad possimus! Delectus quidem itaque sequi consectetur fugiat, porro in!</p>
+                <p class="card-text">El restaurante nro 1 por su excelente serivicio al cliente y basto menu. Especializado en la comida buffet pero contando con comidas de todo tipo.</p>
                 <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                 </div>
             </div>
-            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                 <img src="../assets/Logos/la25.jpg" class="card-img-top img-fluid img-thumbnail" alt="la25logo">
                 <div class="card-body">
                 <h5 class="card-title">La 25</h5>
@@ -65,7 +65,7 @@
                 <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                 </div>
             </div>
-            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                 <img src="../assets/Logos/meet.jpg" class="card-img-top img-fluid img-thumbnail" alt="meetlogo">
                 <div class="card-body">
                 <h5 class="card-title">Meet</h5>
@@ -78,9 +78,9 @@
     
     <!--Cards Comida rapida-->
     <p class="display-1 text-center tipo__comida" id="rapida"><strong>Comida Rápida</strong></p>
-    <div class="card-group container-fluid container-sm cartas">
+    <div class="c__cartas card-group container-fluid container-sm my-4 c__cartas">
         <div class="row">
-            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                 <img src="../assets/Logos/kfc.jpg" class="card-img-top img-fluid img-thumbnail" alt="kfclogo">
                 <div class="card-body">
                 <h5 class="card-title">KFC</h5>
@@ -88,7 +88,7 @@
                 <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                 </div>
             </div>
-            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                 <img src="../assets/Logos/Mcdonalds.png" class="card-img-top img-fluid img-thumbnail" alt="mcdonaldslogo">
                 <div class="card-body">
                 <h5 class="card-title">McDonalds</h5>
@@ -96,7 +96,7 @@
                 <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                 </div>
             </div>
-            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                 <img src="../assets/Logos/BURGER-KING.png" class="card-img-top img-fluid img-thumbnail" alt="burguerkinglogo">
                 <div class="card-body">
                 <h5 class="card-title">Burguer King</h5>
@@ -109,9 +109,9 @@
 
     <!--Cards Gourmet-->
         <p class="display-1 text-center tipo__comida" id="gourmet"><strong>Gourmet</strong></p>
-        <div class="card-group container-fluid container-sm cartas">
+        <div class="c__cartas card-group container-fluid container-sm my-4 c__cartas">
             <div class="row">
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/fenicia.jpg" class="card-img-top img-fluid img-thumbnail" alt="fenicialogo">
                     <div class="card-body">
                     <h5 class="card-title">Fenicia</h5>
@@ -119,7 +119,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/el-zocalo-autentica-comida.jpg" class="card-img-top img-fluid img-thumbnail" alt="zocalologo">
                     <div class="card-body">
                     <h5 class="card-title">El Zócalo</h5>
@@ -127,7 +127,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/restaurant-LA-GALITE.jpg" class="card-img-top img-fluid img-thumbnail" alt="galitelogo">
                     <div class="card-body">
                     <h5 class="card-title">La Galite</h5>
@@ -141,9 +141,9 @@
     
     <!--Cards Familiar-->
         <p class="display-1 text-center tipo__comida" id="familiar"><strong>Familiar</strong></p>
-        <div class="card-group container-fluid container-sm cartas">
+        <div class="c__cartas card-group container-fluid container-sm my-4 c__cartas">
             <div class="row">
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/san-carbon-parrilla-bar-2016.jpg" class="card-img-top img-fluid img-thumbnail" alt="carbonlogo">
                     <div class="card-body">
                     <h5 class="card-title">San Carbon</h5>
@@ -151,7 +151,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/elcielo.jpg" class="card-img-top img-fluid img-thumbnail" alt="cielologo">
                     <div class="card-body">
                     <h5 class="card-title">El Cielo</h5>
@@ -159,7 +159,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/DEJ.jpg" class="card-img-top img-fluid img-thumbnail" alt="quererlogo">
                     <div class="card-body">
                     <h5 class="card-title">Dejate Querer</h5>
@@ -173,9 +173,9 @@
 
     <!--Cards Bar-->
         <p class="display-1 text-center tipo__comida" id="bar"><strong>Bar</strong></p>
-        <div class="card-group container-fluid container-sm cartas">
+        <div class="c__cartas card-group container-fluid container-sm my-4 c__cartas">
             <div class="row">
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/habanita.png" class="card-img-top img-fluid img-thumbnail" alt="habanitalogo">
                     <div class="card-body">
                     <h5 class="card-title">La Habanita</h5>
@@ -183,7 +183,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/triada.jpg" class="card-img-top img-fluid img-thumbnail" alt="triadalogo">
                     <div class="card-body">
                     <h5 class="card-title">La Triada</h5>
@@ -191,7 +191,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white sombras" style="height: fit-content;">
                     <img src="../assets/Logos/palmitas-siempre.jpg" class="card-img-top img-fluid img-thumbnail" alt="palmitaslogo">
                     <div class="card-body">
                     <h5 class="card-title">Palmitas</h5>
