--- a/pages/local.html
+++ b/pages/local.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva-Pettra</title>
-    <link rel="shortcut icon" href="../assets/Logos/icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/Logos/icono2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
@@ -153,7 +153,7 @@
         <!--Ubicacion y perfil de facebook del local-->
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8154319499777!2d-68.35309128447511!3d-34.60882838045806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96790813edce7661%3A0x74ccad8d212d5a8e!2sPettra%20Resto!5e0!3m2!1ses-419!2sar!4v1647034223456!5m2!1ses-419!2sar" class="mapa"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <a href="https://www.facebook.com/pettra.resto/">
-            <img class="facebook" src="../assets/Logos/facebook-600.png" alt="facebooklogo">
+            <img class="facebook" src="../assets/Logos/facebook.png" alt="facebooklogo">
         </a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
